Pull up following revision(s) (requested by dholland in ticket #87): 	usr.bin/uuencode/uuencode.c: revision 1.16 	usr.bin/uuencode/uuencode.1: revision 1.23 	usr.bin/uuencode/uuencode.1: revision 1.24 	usr.bin/uuencode/uuencode.1: revision 1.25 	usr.bin/uuencode/uuencode.1: revision 1.26 Clarify usage message and improve documentation; pursuant to PR 49177.